# geekoapp

./: .gitignore  README.md  docker-compose.yml
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
geeko-api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
geeko-api/geeko_api/: main.py  models.py  oracle_client.py  sage_client.py  simulator.py  store.py
geeko-api/tests/: test_main.py  test_models.py  test_oracle_client.py  test_sage_client.py  test_simulator.py  test_store.py
helm/geeko/: Chart.yaml  values.yaml
helm/geeko/templates/: NOTES.txt  deployment-api.yaml  deployment-frontend.yaml  redis-dockerhub.yaml  service-api.yaml  service-frontend.yaml
oracle/: Dockerfile  geeko-oracle.service  install.sh  pyproject.toml
oracle/oracle_service/: main.py  patch_status.py
oracle/tests/: test_main.py  test_patch_status.py
sage/: Dockerfile  geeko-sage.service  install.sh  pyproject.toml
sage/sage_service/: main.py
sage/tests/: test_main.py  test_patch_status.py
