[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geeko-api"
version = "0.1.0"
description = "Geeko API - Virtual chameleon mascot tracker"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "redis==5.0.8",
    "httpx==0.27.2",
    "pydantic==2.9.2",
]
